# vcfparser

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  PRE_COMMIT_TEST_REPORT.md  README copy.md  README.md  README.rst  TESTING.md  after_type_hints.csv  baseline_results.csv  example.py  example.vcf  input_test.vcf  main.py  mainfile.py  make.bat  meta_header_parser.py  meta_parser.py  mine.py  mypy.ini  pre_commit_final.csv  pyproject.toml  pytest.ini  rand.txt  record_formatter.py  record_parser.py  run_tests.py  run_tests.sh  setup.py  tox.ini  vcf_parser.py  vcf_writer.py
TUTORIAL/: GENOTYPE_ANALYSIS_REFERENCE.md  README.md  create_large_dataset.py  population_genetics_analysis.py
benchmarks/: benchmark_suite.py
dev_docs/: CLEANUP_TODO.md  DEVELOPMENT_STRATEGY.md  MODERNIZATION_PLAN.md  PROGRESS_LOG.md  WARP.md  testing_self.md
docs/: ARCHITECTURE.md  AUTHORS.rst  GENOTYPE_ANALYSIS_REFERENCE.md  README.rst  WORKFLOW_DIAGRAM.md  advanced_usage.rst  conf.py  index.rst  installation.rst  metadata.rst  modules.rst  record_class.rst  record_parser.rst  vcfparser.rst
examples/: README.md  advanced_tutorial.py  advanced_usage.py  basic_usage.py  create_tutorial_vcf.py
experimentation/: memory.py  reader.py  sample.txt  sample1.txt  vcfparser_0.py
tests/: expected_config.py  test_parser.py
tests_new/: TEST_FAILURES.md  TODO_TEST_FIXES.md  __init__.py  conftest.py
vcfparser/: __init__.c  __init__.py  meta_header_parser.c  meta_header_parser.py  meta_header_parser.pyx  metaviewer.py  record_parser.c  record_parser.py  record_parser.pyx  vcf_parser.c  (+5 more)
(+47 files in other folders)
