[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcfparser"
version = "0.2.2"
description = "Python (version <=3.12) package for parsing the genomics and transcriptomics VCF data."
readme = "README.md"
keywords = ["vcfparser"]
classifiers = [
    "Development Status :: 3 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }
authors = [{ name = "Kiran Bishwa", email = "kirannbishwa01@gmail.com" }]

[tool.setuptools]
packages = ["vcfparser"]
include-package-data = true
